compiler/tests/should-fail/MalleableDeclassify.via
/* MalleableDowngradeError */

process main {
    val result: int = declassify 42 from {A->} to {B->};
}
